GAMS Transfer R v1.12.0
==================
- released for MacOS ARM64
- bug fix in writing empty container
- added `Symbol` method `copy` to copy symbol from one `Container` or `ConstContainer` to another `Container`
- added `Container` and `ConstContainer` method `copy` to copy symbols from to another
- bug fix in using ConstContainer Alias methods when the aliased parent set is absent

GAMS Transfer R v1.10.0
==================
- performance improvement in read
- Partial domain forwarding is now allowed by passing a logical vector as the `domainForwarding` argument
- `generateRecords` method for `Symbols` to automatically generate records

GAMS Transfer R v1.8.0
==================
- `removeSymbols` removes symbol links in other symbols
- added `symbols` argument to Container methods `renameUELs` and `removeUELs`
- `findDuplicateRecords` now returns a data frame instead of row indices
- Breaking: `Container` `data` field is now an ordered dictionary from `collections` package instead of named list. Instead of `m$data$<symbolname>`, use `m[<symbolname>]`.
- performance improvement to `Container` method `hasSymbols`. This results in significant speed-ups when adding multiple symbols to the Container.
- added `symbols` argument to `Container` methods `getDomainViolations`, `hasDomainViolations`, `countDomainViolations`, `dropDomainViolations`, `hasDuplicateRecords`, `countDuplicateRecords`, `dropDuplicateRecords`, `isValid`, and `write` for partial operation.
- `Container` method `getSymbols` now always returns a list
- added `equals` method to `Symbols` to check if symbols are equal
- bug fix in `SpecialValues$isNA`
- bug fix in `getUELs` for scalar symbols
- bug fix in `Symbol` method `isValid` for symbols containing only NA
- bug fix in `Variable` and `Equation` set records for numeric inputs
- added `equals` method for `Container` and `ConstContainer`

GAMS Transfer R v1.6.0
==================
- domain forwarding bug fix when the records are NULL