@@ -1,3 +1,7 @@
+GAMS Transfer R
+==================
+- Significant performance improvements to Container write method
+
 GAMS Transfer R v1.12.0
 ==================
 - released for MacOS ARM64
